fix: collapsible oveflow hidden only when collapsed

--- a/src/collapsible/collapsible.scss
+++ b/src/collapsible/collapsible.scss
@@ -1,4 +1,7 @@
 .collapsible {
-  overflow: hidden;
   transition: height 0.4s ease-out;
+
+  &.collapsed {
+    overflow: hidden;
+  }
 }
